--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raashid Jabir's Website</title>
+    <title>i2p</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Personal Website</h1>
+        <h1>i2p</h1>
     </header>
     <nav>
         <ul>
@@ -18,22 +18,24 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Hi, I'm Raashid Jabir. Welcome to my personal website where I share updates about my projects and interests.</p>
-    </section>
-    <section id="news">
-        <h2>Latest News on AI and IoT</h2>
-        <div id="news-content">Loading...</div>
-    </section>
-    <section id="gallery">
-        <h2>Gallery</h2>
-        <div class="gallery">
-            <img src="https://via.placeholder.com/150" alt="Sample Image 1">
-            <img src="https://via.placeholder.com/150" alt="Sample Image 2">
-            <img src="https://via.placeholder.com/150" alt="Sample Image 3">
-        </div>
-    </section>
+    <main>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Hi, I'm Raashid Jabir. Welcome to my personal website where I share updates about my projects and interests.</p>
+        </section>
+        <section id="news">
+            <h2>Latest News on AI and IoT</h2>
+            <div id="news-content">Loading...</div>
+        </section>
+        <section id="gallery">
+            <h2>Gallery</h2>
+            <div class="gallery">
+                <img src="iot1.jpg" alt="IoT Image 1">
+                <img src="https://via.placeholder.com/150" alt="Sample Image 2">
+                <img src="https://via.placeholder.com/150" alt="Sample Image 3">
+            </div>
+        </section>
+    </main>
     <footer id="contact">
         <p>Contact: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
     </footer>
