--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>Hi, I'm Raashid Jabir. Welcome to my personal website where I share updates about my projects and interests.</p>
+            <p>Hi, I'm Raashid Jabir. Welcome to my personal website.</p>
         </section>
         <section id="news">
             <h2>Latest News on AI and IoT</h2>
@@ -37,7 +37,7 @@
         </section>
     </main>
     <footer id="contact">
-        <p>Contact: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+        <p>Contact: <a href="netwex89@gmail.com">your-email@example.com</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
